--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -32,7 +32,7 @@
 \newcommand{\sgn}{{\mathrm{sgn}}}
 \newcommand{\GF}{Green's function}
 \newcommand{\unity}{\mathds{1}}
-\renewcommand{\vec}{\mathbf}
+% \renewcommand{\vec}{\mathbf}
 
 \title{GW (oneshot) + DMFT documentation}
 
@@ -43,7 +43,6 @@
 \clearpage
 
 \section{Introduction}
-
 This document  provides our prescription of the combination of a GW calculation 
 for correlated materials with DMFT applied only to a subset of correlated 
 orbitals. At this level, the GW calculation will be performed only once at the 
